--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -62,14 +62,14 @@
     </div>
 
     <ul class="nav">
-      {% if request.user.profile.is_tenant or request.user.profile.is_manager %}
+      {% if request.user.profile.is_tenant or request.user.profile.is_manager or request.user.is_superuser %}
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'tenant_dashboard' %} ">
           <i class="material-icons">dashboard</i>
           <p>Tenant_Dashboard</p>
         </a>
       </li>
-      {% endif %} {% if request.user.profile.is_manager %}
+      {% endif %} {% if request.user.profile.is_manager or request.user.is_superuser %}
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'dashboard' %}">
           <i class="material-icons">dashboard</i>
