--- a/templates/new_door/unit_overview.html
+++ b/templates/new_door/unit_overview.html
@@ -86,10 +86,10 @@
       </div>
       <div
         class="card-icon float-right"
-        style="padding: 0.5em 0; font-size: 1rem; background: rgb(224, 79, 115)"
+        style="padding: 0.5em 0; font-size: 1rem; "
       >
         <a
-          href=" {% url 'add_unit'%} "
+          href=" {% url 'add_unit' %} "
           class="card-header card-header-rose card-header-text"
         >
           <i class="material-icons">add</i>Add Unit
