--- a/templates/new_door/add_user.html
+++ b/templates/new_door/add_user.html
@@ -156,13 +156,12 @@
               <input
                 class="form-check-input"
                 type="checkbox"
-                value=""
                 id="is_owner"
                 name="is_owner"
                 required="true"
                 aria-required="true"
               />
-              {{ form.is_owner }} Is owner
+              Is owner
               <span class="form-check-sign" style="left: 146px">
                 <span class="check"></span>
               </span>
