--- a/templates/new_door/property_all_overview.html
+++ b/templates/new_door/property_all_overview.html
@@ -129,7 +129,7 @@
                 <td>{{property.property_name}}</td>
                 <td><b>$</b>676,576.7-demo</td>
                 <td><b>$</b>235,767-demo</td>
-                <td class="text-center">{{ number_of_units }}</td>
+                <td class="text-center">{{ property.unit_set.all.count }}</td>
                 <td>
                   <div
                     class="progress progress-line-primary"
